Refactor fillna usage in dataset.ipynb

--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2531,7 +2531,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df[\"service\"].fillna(\"Unknown\", inplace=True)\n"
+        "df[\"service\"].fillna(\"Unknown\")\n"
       ],
       "metadata": {
         "colab": {
@@ -2561,7 +2561,7 @@
       "cell_type": "code",
       "source": [
         "avg = df[\"duration\"].mean()\n",
-        "df[\"duration\"].fillna(avg, inplace=True)\n"
+        "df[\"duration\"] = df[\"duration\"].fillna(avg)\n"
       ],
       "metadata": {
         "colab": {
